# JaJaEngine

./: .gitignore  CMakeLists.txt  JaJaEngine.sublime-project  README.md
assets/entities/car/: car.xml
assets/entities/old_man/: old_man.xml
assets/entities/player/: player.xml
assets/levels/level01/: entities.xml  maps.xml  textures.xml
assets/maps/city/: city.tmx
assets/maps/forest/: forest.tmx
assets/maps/outdoors1/: outdoors1.tmx
documents/: TODO
include/Object/: Object.h
include/Observer/: Observer.h  Subject.h
include/SDL/: SDL_Deleter.h  SDL_Properties.h
include/Sequence/: Sequence.h
include/TextureProperties/: TextureProperties.h
include/Vector2D/: Vector2D.h
libraries/tinyxml2/: CMakeLists.txt  tinyxml2.cpp
libraries/tinyxml2/include/: tinyxml2.h
source/: CMakeLists.txt  main.cpp
source/Camera/: CMakeLists.txt  Camera.cpp
source/Camera/include/: Camera.h
source/Entity/: CMakeLists.txt  Entity.cpp
source/Entity/Animation/: Animation.cpp  CMakeLists.txt
source/Entity/Animation/include/: Animation.h
source/Entity/Car/: CMakeLists.txt  Car.cpp
source/Entity/Car/include/: Car.h
source/Entity/Object/: CMakeLists.txt  Object.cpp
source/Entity/Object/include/: Object.h
source/Entity/OldMan/: CMakeLists.txt  OldMan.cpp
source/Entity/OldMan/include/: OldMan.h
source/Entity/Player/: CMakeLists.txt  Player.cpp
source/Entity/Player/include/: Player.h
source/Entity/include/: Entity.h  RigidBody.h  Transform.h
source/Factory/: CMakeLists.txt  EntityCreator.cpp  RegisterEntities.cpp
source/Factory/include/: EntityCreator.h  EntityRegister.h  Factory.h
source/Level/: CMakeLists.txt  Level.cpp
source/Level/Map/: CMakeLists.txt  Layer.cpp  Map.cpp
source/Level/Map/include/: Layer.h  Map.h  Tileset.h
source/Level/XMLParser/: CMakeLists.txt  XMLParser.cpp
source/Level/XMLParser/include/: XMLParser.h
source/Level/include/: Level.h
source/Menu/: CMakeLists.txt  Menu.cpp
source/Menu/include/: Menu.h
source/Quadtree/: CMakeLists.txt  Quadtree.cpp
source/Quadtree/include/: Quadtree.h
source/Resources/: CMakeLists.txt  Resources.cpp
source/Resources/Engine/: CMakeLists.txt  Engine.cpp
source/Resources/Engine/include/: Engine.h
source/Resources/InputHandler/: CMakeLists.txt  InputHandler.cpp
source/Resources/InputHandler/include/: InputHandler.h
source/Resources/TextureManager/: CMakeLists.txt  TextureManager.cpp
source/Resources/TextureManager/include/: TextureManager.h
source/Resources/include/: Resources.h
